@@ -28,7 +28,8 @@ enum GamepadType {
   GAMEPAD_XBOX360,
   GAMEPAD_XBOX360_WIRELESS,
   GAMEPAD_XBOX360_GUITAR,
-  GAMEPAD_FIRESTORM
+  GAMEPAD_FIRESTORM,
+  GAMEPAD_FIRESTORM_VSB
 };
 
 enum XboxMsgType {
