@@ -3,6 +3,7 @@ xboxdrv 0.4.7 - (??/May/2009)
 
 * support for Pelican TSZ360 pad
 * support for Saitek P3200 pad
+* support for Thrustmaster Firestorm Dual Power (044f:b312)
 * deadzone support for trigger via --deadzone-trigger NUM
 * some documentation improvements
 
@@ -41,7 +42,7 @@ xboxdrv 0.4.3 - (17/Jan/2009)
 * added support for X11 keysym in --ui-buttonmap
 * added --ui-clear and 'void' mappings to unmap buttons and axis
 * fixed LED handling for wireless gamepads
-* Thrustmaster Firestorm Dual Power support
+* Thrustmaster Firestorm Dual Power support (044f:b304)
 * added --name option to set device name
 * added JS_${NUM} name to address joystick buttons by number instead
   of name
